Cleaned up a lot of warnings and static analysis issues in viewer